namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: c2c-prod-namespace
  labels:
    name: c2c-prod-namespace
