sow_parser_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-c2c-openai-sow-parser
  namespace: c2c-prod-namespace
spec:
  selector:
    matchLabels:
      app: ms-c2c-openai-sow-parser
  template:
    metadata:
      labels:
        app: ms-c2c-openai-sow-parser
    spec:
      serviceAccountName: "workload-identity-sa"
      volumes:
          - name: secrets-store01-inline
            csi:
              driver: secrets-store.csi.k8s.io
              readOnly: true
              volumeAttributes:
                secretProviderClass: "c2c-prod-namespace"
      containers:
      - name: ms-c2c-openai-sow-parser
        image: brlregistrity.azurecr.io/c2c-openai-sow-parser:9375d22
        resources:
          requests:
            cpu: 95m
            memory: 500Mi
          limits:
            cpu: 100m
            memory: 500Mi
        ports:
        - containerPort: 8002
        volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true
