sum_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-sum
  namespace: c2c-prod-namespace
spec:
  selector:
    matchLabels:
      app: ms-sum
  template:
    metadata:
      labels:
        app: ms-sum
    spec:
      containers:
      - name: ms-mul
        image: sudha50/sum-service:latest
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8002
