auth_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: c2c-prod-namespace
  labels:
    app: ms-auth
spec:
  selector:
    app: ms-auth
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  type: ClusterIP
