master_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-master
  labels:
    app: ms-master
spec:
  selector:
    app: ms-master
  ports:
  - port: 8000
    targetPort: 8000
    NodePort: 30000
  type: NodePort
