mul_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mul-svc
  labels:
    app: ms-mul
spec:
  selector:
    app: ms-mul
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  type: ClusterIP
