sum_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sum-svc
  namespace: c2c-prod-namespace
  labels:
    app: ms-sum
spec:
  selector:
    app: ms-sum
  ports:
  - port: 8002
    protocol: TCP
    targetPort: 8002
  type: ClusterIP
